--- a/firebase/package.json
+++ b/firebase/package.json
@@ -5,7 +5,9 @@
   "description": "McWiCS 2026",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
