--- a/package.json
+++ b/package.json
@@ -1,5 +1,27 @@
 {
+  "name": "flexihand",
+  "version": "1.0.0",
+  "type": "module",
+  "description": "McWics 2026",
+  "main": "index.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tristazecchel/FlexiHand.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tristazecchel/FlexiHand/issues"
+  },
+  "homepage": "https://github.com/tristazecchel/FlexiHand#readme",
   "dependencies": {
+    "firebase": "^12.9.0",
     "@mediapipe/tasks-vision": "^0.10.32"
   },
   "devDependencies": {
