--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/tristazecchel/FlexiHand#readme",
   "dependencies": {
-    "firebase": "^12.9.0",
-    "@mediapipe/tasks-vision": "^0.10.32"
+    "@mediapipe/tasks-vision": "^0.10.32",
+    "firebase": "^12.9.0"
   },
   "devDependencies": {
     "vite": "^7.3.1"
